2005-01-18  David Schleef  <ds@schleef.org>

	* acconfig.h: remove
	* autogen.sh: use m4/ directory for aclocal

2005-01-17  David Schleef  <ds@schleef.org>

	Patch from igor@avtomir.ru (Igor Mokrushin)

	* audio_arts.c: New backend (bug #82154)
	* esd.c: (main):

2005-01-17  David Schleef  <ds@schleef.org>

	* Makefile.am: update for modern automake/autoconf
	* audio.c: make ALSA-1.0 the default driver
	* configure.ac: update for modern automake/autoconf
	* configure.in: remove
	* m4/as-arts.m4: (new) arts detection

2004-11-23  David Schleef  <ds@schleef.org>

	* docs/esd-config.1.in: Remove word break. (bug #158839, fix
	from Miloslav Trmac)

2004-08-12  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in:
	* NEWS
	Release 0.2.35

2004-08-12  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* audio_alsa09.c:
	Use Alsa default alias when no card is specified (bug #144318,
	original fix from Cyrille Chepelov)

2004-08-12  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* .cvsignore:
	Quiet CVS.

	* docs/esd.1.in:
	* esd.c: (main):
	* esd.conf:
	* esd_config.c: (esd_config_read), (esd_config_read_file):
	Fix regression caused by patch for bug #118230 (bug #147293).
	Add new default options in configuration file and as environment
	variable, always used. spawn_options behaviour is back to normal.
	Add commandline options to enable beeps, disable termination and
	disable autostandby.

2004-08-11  Kjartan Maraas  <kmaraas@gnome.org>

	* esd.h: ANSI argument list fix.
	* esdlib.c: (esd_send_auth): NULL vs 0 usage. Also
	fix usage of esd_connect_unix() in a few places.

2004-08-11  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* audio_oss.c:
	* configure.in:
	* esddsp.c:
	GNU/kFreeBSD support (bug #149816, patch from 
	Robert Milan <rmh@debian.org>).

2004-06-11  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* docs/esddsp.1.in:
	* esddsp.c: (dsp_init), (mmapemu_flush), (open), (dspctl), (close),
	(mmap), (munmap):
	* esddsp.in: