@@ -1,3 +1,8 @@
+2005-05-25  David Schleef  <ds@schleef.org>
+
+	* esdfile.c: (esd_play_file): Disable compressed audio, since
+	audiofile doesn't play it correctly.  (bug #107483)
+
 2005-01-18  David Schleef  <ds@schleef.org>
 
 	* acconfig.h: remove
